# Hobby-Anime

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  constraints.txt  docker-compose.yml  pyproject.toml
.codegraph/: .gitignore
.cursor/: mcp.json
.cursor/rules/: gentle-ai.mdc
.github/workflows/: ci.yml
docs/: arr-setup.md
docs/superpowers/plans/: 2026-07-19-manual-rejection-review.md
docs/superpowers/specs/: 2026-07-19-manual-rejection-review-design.md
scripts/: backup-offsite.sh  backup-stack.sh  setup-nas.sh
src/hobby_anime/: __init__.py  __main__.py  anilist.py  anilist_mapping.py  anilist_oauth.py  anilist_push.py  anilist_write.py  arr_clients.py  cleanup.py  cli.py  config.py  daily.py  database.py  doctor.py  jellyfin_client.py  library.py  library_import.py  manual_review.py  media_inspector.py  models.py  monthly.py  notifications.py  qbittorrent_client.py  recommender.py  rss.py  scheduler.py  sonarr_client.py  status_api.py  verification.py
tests/: conftest.py  test_anilist.py  test_anilist_mapping.py  test_anilist_oauth.py  test_anilist_push.py  test_anilist_write.py  test_arr_clients.py  test_cleanup.py  test_cli.py  test_cli_anilist_auth.py  test_cli_cleanup.py  test_cli_push_anilist.py  test_cli_watched.py  test_config.py  test_daily.py  test_database.py  test_doctor.py  test_jellyfin_client.py  test_library.py  test_library_import.py  test_manual_review.py  test_media_inspector.py  test_models.py  test_monthly.py  test_notifications.py  test_qbittorrent_client.py  test_recommender.py  test_rss.py  test_sonarr_client.py  test_status_api.py  test_verification.py
