[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hobby-anime"
version = "0.1.0"
description = "Automatización local de medios mediante RSS, qBittorrent, AniList y Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "APScheduler>=3.11,<4",
    "feedparser>=6,<7",
    "qbittorrent-api>=2025.7,<2027",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=6,<8",
]

[project.scripts]
hobby-anime = "hobby_anime.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["hobby_anime"]
