[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hobby-anime"
version = "0.1.0"
description = "Automatización local de medios mediante RSS, qBittorrent, AniList y Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "APScheduler>=3.11,<4",
    "feedparser>=6,<7",
    "qbittorrent-api>=2025.7,<2027",
    "requests>=2.32,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=6,<8",
    "ruff>=0.6",
    "pip-audit>=2.7",
    "httpx2>=2.7,<3",
    "commitizen>=3,<5",
]

[project.scripts]
hobby-anime = "hobby_anime.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["hobby_anime"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
